# zad3-GrzegorzWojnarowicz

./: README.md
Rotation/: CMakeLists.txt
Rotation/data/: vertex.xy
Rotation/inc/: Matrix2x2.h  Rectangle.h  Vector2D.h
Rotation/src/: main.cpp  matrix2x2.cpp  rectangle.cpp  vector2D.cpp
Rotation/tst/: CMakeLists.txt  matrix2x2-test.cpp  rectangle-tst.cpp  vector2D-test.cpp
